--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <h2>Hello World!!</h2>
-    </div>
+    <h1 class="text-3xl font-bold underline">Hello world!2</h1>
+    <h2 class="text-2xl font-bold text-blue-500">Test</h2>
+    <h2 class="text-2xl font-bold text-blue-500">Test3</h2>
   </body>
 </html>
