--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1 class="text-3xl font-bold underline">Hello world!2</h1>
-    <h2 class="text-2xl font-bold text-blue-500">Test</h2>
-    <h2 class="text-2xl font-bold text-blue-500">Test3</h2>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Benz Tailwind教學</title>
+</head>
+<body>
+
+  <!-- <div class="w-full px-4 py-3 flex box-border rounded-lg bg-gray-800 sm:bg-red-400 xx:bg-green-400"> -->
+  <div class="card">
+    <div class="w-12 mr-3 flex-shrink-0 rounded-full overflow-hidden">
+      <img src="https://bruce-fe-fb.web.app/image/avator.png" alt="">
+    </div>
+    <!-- <button class="flex-1 rounded-full bg-gray-600">
+      <p class="text-left pl-3 text-gray-400 text-sm">
+        Benz，在想什麼
+      </p>
+    </button> -->
+
+    <button class="flex-1 bg-gray-600 rounded-full ring-gray-500 active:ring-4">
+      <p class="text-left pl-3 text-gray-400 text-sm hover:text-gray-200">
+        Benz，在想什麼
+      </p>
+    </button>
+  </div>
+
+</body>
 </html>
