config 自定義主題

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,8 @@
       </p>
     </button> -->
 
-    <button class="flex-1 bg-gray-600 rounded-full ring-gray-500 active:ring-4">
+    <!-- bg-fill 是自訂的顏色 -->
+    <button class="flex-1 bg-fill rounded-full ring-gray-500 active:ring-4">
       <p class="text-left pl-3 text-gray-400 text-sm hover:text-gray-200">
         Benz，在想什麼
       </p>
