--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <!-- <div class="w-full px-4 py-3 flex box-border rounded-lg bg-gray-800 sm:bg-red-400 xx:bg-green-400"> -->
-  <div class="card">
+  <div class="card hover:scale-50">
     <div class="w-12 mr-3 flex-shrink-0 rounded-full overflow-hidden">
       <img src="https://bruce-fe-fb.web.app/image/avator.png" alt="">
     </div>
@@ -27,5 +27,14 @@
     </button>
   </div>
 
+  <!-- Just in Time 可以直接在html上做tailwind的自定義編寫，不用一直跑到config去做設定啦！ -->
+  <div class="bg-[#eee] w-[50px] h-14"></div>
+  <!-- bg-red-400/90 => bg-red-400 透明度90% -->
+  <div class="bg-red-400/90 w-[3.5rem] h-14"></div>
+  <p class="text-[color:var(--ben-primary)] text-[length:var(--ben-title)]">Test</p>
+  <div class="before:content-['Test1'] before:block before:bg-blue-500 after:flex after:bg-pink-300 after:content-['Test2']"></div>
+
+  <!-- input 框的指針 -->
+  <input type="text" class="caret-red-500">
 </body>
 </html>
