--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- 設定深色模式 -->
+<!-- <html lang="en" class="dark"> --> 
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -36,5 +38,8 @@
 
   <!-- input 框的指針 -->
   <input type="text" class="caret-red-500">
+
+  <button id="light">light</button>
+  <button id="dark">dark</button>
 </body>
 </html>
